--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -8,10 +8,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfolio</title>
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
+   <!--     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
             integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
-            crossorigin="anonymous" />
-        {% tailwind_css %}        
+            crossorigin="anonymous" /> -->
+        {% tailwind_css %}
+        <script src="https://kit.fontawesome.com/4d73d18a28.js" crossorigin="anonymous"></script>
+        
     </head>
 
     <body>
