--- a/portfolio/templates/portfolio/skill.html
+++ b/portfolio/templates/portfolio/skill.html
@@ -3,7 +3,7 @@
 <div class="bg-white shadow shadow-gray-700 py-5 px-4 text-center flex flex-col justify-center">
     <div>
         <div class="flex justify-center">
-            <img src="{% static skill.img.url %}" alt="{{ skill.title }}" width={{ skill.img.width }}>
+            <img src="{% static skill.img.url %}" alt="{{ skill.title }}" width={{ skill.img.width }} heigt={{ skil.img.heigt }}>
         </div>
         <h4 class="font-bold pb-3">{{ skill.title }}</h4>
     </div>
