--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -13,7 +13,48 @@
         <script src="https://kit.fontawesome.com/4d73d18a28.js" crossorigin="anonymous"></script>
         -->
         <!-- Partial font awesome import using Django-Fontawesome app -->
+        <!--
         <link href="{% static 'fontawesome_free/css/fontawesome.css' %}" rel="stylesheet" type="text/css">
+        -->
+        <style>
+        .fa,
+        .fab {
+        -moz-osx-font-smoothing: grayscale;
+        -webkit-font-smoothing: antialiased;
+        display: inline-block;
+        font-style: normal;
+        font-variant: normal;
+        text-rendering: auto;
+        line-height: 1;
+        }
+        .fa-2x {
+        font-size: 2em;
+        }
+        .fa-github:before {
+        content: "\f09b";
+        }
+
+        .fa-github-alt:before {
+        content: "\f113";
+        }
+
+        .fa-github-square:before {
+        content: "\f092";
+        }
+.fa-linkedin:before {
+content: "\f08c";
+}
+
+.fa-linkedin-in:before {
+content: "\f0e1";
+}
+
+.fa-linode:before {
+content: "\f2b8";
+}
+
+
+        </style>
         <link href="{% static 'fontawesome_free/css/brands.css' %}" rel="stylesheet" type="text/css">
 
     </head>
