--- a/portfolio/static/css/fa.css
+++ b/portfolio/static/css/fa.css
@@ -3,6 +3,12 @@
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
  */
 
+
+/*
+ * I don't use this file. Instead I've copy-pasted the few classes I ned into a custom fa stylesheet
+ *
+ */
+
 .fa,
 .fas,
 .far,
