--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -9,52 +9,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfolio</title>
         {% tailwind_css %}
-        <!-- Full Font Awesome import using link proved in mail
-        <script src="https://kit.fontawesome.com/4d73d18a28.js" crossorigin="anonymous"></script>
-        -->
-        <!-- Partial font awesome import using Django-Fontawesome app -->
-        <!--
-        <link href="{% static 'fontawesome_free/css/fontawesome.css' %}" rel="stylesheet" type="text/css">
-        -->
-        <style>
-        .fa,
-        .fab {
-        -moz-osx-font-smoothing: grayscale;
-        -webkit-font-smoothing: antialiased;
-        display: inline-block;
-        font-style: normal;
-        font-variant: normal;
-        text-rendering: auto;
-        line-height: 1;
-        }
-        .fa-2x {
-        font-size: 2em;
-        }
-        .fa-github:before {
-        content: "\f09b";
-        }
-
-        .fa-github-alt:before {
-        content: "\f113";
-        }
-
-        .fa-github-square:before {
-        content: "\f092";
-        }
-.fa-linkedin:before {
-content: "\f08c";
-}
-
-.fa-linkedin-in:before {
-content: "\f0e1";
-}
-
-.fa-linode:before {
-content: "\f2b8";
-}
-
-
-        </style>
+        <!-- font awesome style import using font awesome django integration & my own purged file -->
+        <link rel="stylesheet" href="{% static 'css/my_fa_styles.css' %}">
         <link href="{% static 'fontawesome_free/css/brands.css' %}" rel="stylesheet" type="text/css">
 
     </head>
