--- a/portfolio/templates/portfolio/skill.html
+++ b/portfolio/templates/portfolio/skill.html
@@ -1,5 +1,4 @@
 {% load static %}
-
 <div class="bg-white shadow shadow-gray-700 py-5 px-4 text-center flex flex-col justify-center">
     <div>
         <div class="flex justify-center">
@@ -11,3 +10,11 @@
         {{ skill.description }}
     </p>
 </div>
+<div>
+</div>
+<div class="dre"></div>
+<div class="re"></div>
+<p></p>
+<p></p>
+
+<p></p>
