--- a/portfolio/templates/portfolio/project_details.html
+++ b/portfolio/templates/portfolio/project_details.html
@@ -9,9 +9,10 @@
         <p class="text-sm sm:text-base mb-4"> 
             {{ description }}
         </p>
+     
         <div class="flex mb-4 pr-8">
-            <p class="text-gray-900 text-sm lg:text-base font-semibold pr-3">Categories: </p>
-            <p class="text-yellow-600 text-sm lg:text-base">Web Application</p>
+            <p class="text-gray-900 text-sm lg:text-base font-semibold pr-3">Category: </p>
+            <p class="text-yellow-600 text-sm lg:text-base">{{ category }}</p>
         </div>
 
         <div class="flex mb-4 ">
@@ -35,8 +36,11 @@
             <a href="{{ github_url }}" class="inline-block px-5 py-2 text-sm border text-gray-700 hover:text-white border-gray-700
                             bg-white hover:bg-gray-700 rounded-full transition ease-in duration-300 ">
                 GitHub Repo
-            </a>
+            </a>   
         </div>
+            {% if title == 'Django Bug Tracker' %}
+            <p class="text-red-500 text-xl mt-6">NB: This project is still under development</p>
+            {% endif %}
     </div>
 </div>
 {% endblock content %}
