--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -31,28 +31,81 @@
                 </div>
                 <!-- nav links-->
                 <div class="flex justify-evenly w-full md:flex-col pt-5 lg:pt-0">
-                    <a href="{% url 'home' %}#home" class="pb-5 hover:text-yellow-500 focus:text-white">
+                    <p class="pb-5 hover:text-yellow-500 focus:text-white cursor-pointer" onclick="nav_to('home')">
                         Home
-                    </a>
-                    <a href="{% url 'home' %}#about" class="pb-5 hover:text-yellow-500 focus:text-white">
+                    </p>
+                    <p class="pb-5 hover:text-yellow-500 focus:text-white cursor-pointer" onclick="nav_to('about')">
                         About
-                    </a>
-                    <a href="{% url 'home' %}#skills" class="pb-5 hover:text-yellow-500 focus:text-white">
+                    </p>
+                    <p class="pb-5 hover:text-yellow-500 focus:text-white cursor-pointer" onclick="nav_to('skills')">
                         Skills
-                    </a>
-                    <a href="{% url 'home' %}#projects" class="pb-5 hover:text-yellow-500 focus:text-white">
+                    </p>
+                    <p class="pb-5 hover:text-yellow-500 focus:text-white cursor-pointer" onclick="nav_to('projects')">
                         Projects
-                    </a>
-                    <a href="{% url 'home' %}#contact" class="pb-5 hover:text-yellow-500 focus:text-white">
+                    </p>
+                    <p class="pb-5 hover:text-yellow-500 focus:text-white cursor-pointer" onclick="nav_to('contact')">
                         Contact
-                    </a>
+                    </p>
                 </div>
             </nav>
             <main class="flex-grow">{% block content %} {% endblock %}</main>
 
         </div> <!-- end of page div -->
+        
+        <script>
+            function nav_to(nav_id){
+                var home_elements = document.getElementsByClassName('home');
+                var project_details_elements = document.getElementsByClassName('project_details')
 
-</body>
+                for (var i = 0; i < project_details_elements.length; i++) { 
+                    project_details_elements[i].classList.add('hidden')
+                }
+
+                for (var i = 0; i < home_elements.length; i++) { 
+                    home_elements[i].classList.remove('hidden')
+                }
+                document.getElementById('about-content').classList.add('lg:flex')
+
+                document.getElementById(nav_id).scrollIntoView();
+
+            }
+    
+            function show_project(urlname){
+
+                var home_elements = document.getElementsByClassName('home');
+                document.getElementById('about-content').classList.remove('lg:flex')
+                for (var i = 0; i < home_elements.length; i++) { 
+                    home_elements[i].classList.add('hidden')
+                }       
+
+                e = document.getElementById(urlname)
+                console.log(e)
+
+                e.classList.remove('hidden')
+                e.classList.add('flex')
+                console.log(e)
+                //location.href = "#project_details"
+                e.scrollIntoView();
+            }
+
+            function over(project) {
+                if (matchMedia('(pointer:fine)').matches) {
+                    // Device has a mouse
+                    document.getElementById(project).classList.remove("hidden");
+                    document.getElementById(project).classList.add("flex");
+                } else {
+                    // Devise has no mouse & users has finger-clicked the project div
+                    show_project("details_"+project);
+                }
+            }
+            function out(element) {
+                element.classList.add("hidden");
+                element.classList.remove("flex");
+            }
+
+       </script>
+
+    </body>
 
 </html>
 
