--- a/portfolio/templates/portfolio/project_details.html
+++ b/portfolio/templates/portfolio/project_details.html
@@ -1,49 +1,46 @@
-{% extends "portfolio/base.html" %}
-{% load static %}
-
-{% block content %}
-
-<div class="w-full h-screen flex align-middle justify-center py-6 md:pt-12">
+<div class="w-full min-h-full align-middle justify-center py-6 px-3 mb-12 pt-12 hidden project_details" id="details_{{ project.urlname }}">
+    
     <div class="text-gray-800 lg:py mt-10 px-6 sm:px-20 sm:mt-12 md:max-w-screen-lg">
-        <h2 class="text-2xl font-bold mb-3"> {{ title }} </h2>
-        {% if urlname == 'bugtracker_django' %}
-            <p class="bg-red-400 mb-4 p-2 text-red-50">NB: This project is still under development</p>
+        <h2 class="text-2xl font-bold mb-3"> {{ project.title }} </h2>
+        {% if project.urlname == 'bugtracker_django' %}
+            <p class="bg-red-400 text-center text-lg mb-4 p-2 text-red-50">This project is currently under development</p>
         {% endif %}
         <p class="text-sm sm:text-base mb-4"> 
-            {{ description }}
+            {{ project.description }}
         </p>
      
         <div class="flex mb-4 pr-8">
             <p class="text-gray-900 text-sm lg:text-base font-semibold pr-3">Category: </p>
-            <p class="text-yellow-600 text-sm lg:text-base">{{ category }}</p>
+            <p class="text-yellow-600 text-sm lg:text-base">{{ project.category }}</p>
         </div>
 
         <div class="flex mb-4 ">
             <p class="text-gray-900 text-sm lg:text-base font-semibold pr-3">Technologies: </p>
-            <p class="text-sm lg:text-base">{{ stack }}</p>
+            <p class="text-sm lg:text-base">{{ project.stack }}</p>
         </div>
 
-        <div class="flex mb-4 pb-3">
+        <div class="flex pb-3">
             <p class="text-gray-900 text-sm lg:text-base font-semibold pr-3">Deployment: </p>
-            <p class="text-sm lg:text-base">{{ deployment }}</p>
+            <p class="text-sm lg:text-base">{{ project.deployment }}</p>
         </div>
-
-        <div class="space-x-4">
+        
+        <div class="flex flex-wrap">
             {% if title != 'This Portfolio' %}
-            <a href="{{ external_url }}"
-                class="px-5 py-2 text-sm text-yellow-50 hover:text-yellow-900 bg-yellow-500 rounded-full hover:bg-yellow-300 transition ease-in duration-300s focus:bg-yellow-500 focus:text-yellow-50">
+            <a href="{{ project.external_url }}"
+                class="mt-5 mr-5 px-5 py-2 text-sm text-center text-blue-50 hover:text-blue-900 bg-blue-500 rounded-full hover:bg-blue-300 transition ease-in duration-300s focus:bg-blue-500 focus:text-blue-50">
                 Visit Project
-            </a>
+            </a>  
             {% endif %}
-
-            <a href="{{ github_url }}" class="inline-block px-5 py-2 text-sm border text-gray-700 hover:text-white border-gray-700
-                            bg-white hover:bg-gray-700 rounded-full transition ease-in duration-300 ">
+            <a href="{{ project.github_url }}"
+                class="mt-5 mr-5 px-5 py-2 text-sm text-center text-yellow-50 hover:text-yellow-900 bg-yellow-500 rounded-full hover:bg-yellow-300 transition ease-in duration-300s focus:bg-yellow-500 focus:text-yellow-50">
                 GitHub Repo
-            </a>   
+            </a>
+            
+            <p class="mt-5 py-2 px-5 text-sm text-center whitespace-nowrap    border text-gray-700 hover:text-white border-gray-700
+                            bg-white hover:bg-gray-700 rounded-full transition ease-in duration-300 cursor-pointer" 
+                            onclick="nav_to('projects')">
+                Go Back
+            </p>  
         </div>
-            {% if title == 'Django Bug Tracker' %}
-            <p class="text-red-500 text-xl mt-6">NB: This project is still under development</p>
-            {% endif %}
     </div>
 </div>
-{% endblock content %}
