--- a/portfolio/templates/portfolio/project_details.html
+++ b/portfolio/templates/portfolio/project_details.html
@@ -25,7 +25,7 @@
         </div>
         
         <div class="flex flex-wrap">
-            {% if title != 'This Portfolio' %}
+            {% if project.title != 'This Portfolio' %}
             <a href="{{ project.external_url }}"
                 class="mt-5 mr-5 px-5 py-2 text-sm text-center text-blue-50 hover:text-blue-900 bg-blue-500 rounded-full hover:bg-blue-300 transition ease-in duration-300s focus:bg-blue-500 focus:text-blue-50">
                 Visit Project
