--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -3,8 +3,8 @@
 
 {% block content %}
 
-<!-- Home -->
-<div class="h-screen bg-gray-700 flex flex-col justify-around lg:justify-center items-center home" id="home">
+<!-- main-content -->
+<div class="h-screen bg-gray-700 flex flex-col justify-around lg:justify-center items-center main-content" id="home">
     <div class="flex flex-col justify-center items-center text-center px-10">
         <h1 class="text-5xl text-white">Kristian <span class="text-yellow-600">Møller
                 Schmidt</span>
@@ -25,9 +25,9 @@
 </div>
 
 <!-- About -->
-<div id="about" class="mb-10 md:mb-0 home"></div>
+<div id="about" class="mb-10 md:mb-0 main-content"></div>
 <div
-    class="min-h-screen bg-white text-gray-800 px-8 sm:px-14 md:pr-20 lg:pl-20 lg:pr-10 xl:px-20  2xl:px-40 py-12 lg:flex home" id="about-content">
+    class="min-h-screen bg-white text-gray-800 px-8 sm:px-14 md:pr-20 lg:pl-20 lg:pr-10 xl:px-20  2xl:px-40 py-12 lg:flex main-content" id="about-content">
     <div class="lg:w-3/12">
         <h1 class="text-4xl font-bold ">About me</h1>
         <h3>The short version</h3>
@@ -73,9 +73,9 @@
 </div>
 
 <!-- Skills-->
-<div id="skills" class="mb-10 md:mb-0 home">
+<div id="skills" class="mb-10 md:mb-0 main-content">
 </div>
-<div class="min-h-screen bg-gray-100 text-gray-900 px-8 sm:px-14 md:px-20 2xl:px-40 py-12 home">
+<div class="min-h-screen bg-gray-100 text-gray-900 px-8 sm:px-14 md:px-20 2xl:px-40 py-12 main-content">
     <h1 class="text-4xl font-bold pb-3 ">My skills</h1>
 
     <p> I build full stack web applications and backend algorithms using tools such as Python, Django, Flask,
@@ -94,8 +94,8 @@
 </div>
 
 <!-- Projects-->
-<div id="projects" class="mb-10 md:mb-0 home"></div>
-<div class="bg-white text-gray-800 px-8 sm:px-14 lg:px-20 2xl:px-40 pt-12 pb-20 home">
+<div id="projects" class="mb-10 md:mb-0 main-content"></div>
+<div class="bg-white text-gray-800 px-8 sm:px-14 lg:px-20 2xl:px-40 pt-12 pb-20 main-content">
     <h1 class="text-4xl font-bold">Projects</h1>
     
     <!-- Full stack webb applications -->
@@ -145,8 +145,8 @@
 
 
 <!-- Contact -->
-<div class="mb-12 home" id="contact"></div>
-<div class="bg-gray-200 text-gray-900 px-8 sm:px-14 lg:px-20 2xl:px-40 py-12 home">
+<div class="mb-12 main-content" id="contact"></div>
+<div class="bg-gray-200 text-gray-900 px-8 sm:px-14 lg:px-20 2xl:px-40 py-12 main-content">
     <h1 class="text-4xl font-bold pb-1">Get in touch</h1>
     <p class="pb-10">Feel free to contact me anytime</p>
 
@@ -256,7 +256,7 @@
 
 <!-- Footer -->
 <!-- Icons are from HeroIcons.com-->
-<div class="flex flex-col lg:flex-row justify-around  bg-gray-800 text-white py-20 home">
+<div class="flex flex-col lg:flex-row justify-around  bg-gray-800 text-white py-20 main-content">
  
     <div class="flex flex-col items-center pb-6 lg:pb-0">
         <svg class="w-10 pb-2" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
