changed text size a few places and updated a link

--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -37,7 +37,7 @@
         <h2 class="text-2xl font-semibold text-gray-900 pb-3">
             I'm Kristian Møller Schmidt, a self-taught
             developer and a trained mathematician</h2>
-        <p class="border-b boder-gray-900 pb-5 text-lg">
+        <p class="border-b boder-gray-900 pb-5 md:text-lg">
             I'm a self-taught software developer with a university background in mathematics and comparative literature. I enjoy various kinds of
             coding, from nerdy computer science stuff like algorithms and machine learning to practical web development, front end and back end.  
             <br><br>
