--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -1,5 +1,6 @@
 {% load tailwind_tags %}
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,7 +9,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfolio</title>
+        <!-- Tailwind CSS -->
         {% tailwind_css %}      
+
         <!-- FontAwesome -->
         <script src="https://kit.fontawesome.com/114f0c3f98.js" crossorigin="anonymous"></script>
   
