--- a/portfolio/templates/portfolio/project_details.html
+++ b/portfolio/templates/portfolio/project_details.html
@@ -1,4 +1,4 @@
-<div class="w-full min-h-full align-middle justify-center py-6 px-3 mb-12 pt-12 hidden project_details" id="details_{{ project.project_id }}">
+<div class="w-full min-h-full align-middle justify-center md:text-large py-6 px-3 mb-12 pt-12 hidden project_details" id="details_{{ project.project_id }}">
     
     <div class="text-gray-800 lg:py mt-10 px-6 sm:px-20 sm:mt-12 md:max-w-screen-lg">
         <h2 class="text-2xl font-bold mb-3"> {{ project.title }} </h2>
