fixed navigation bug

--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -71,6 +71,7 @@
                 }
                 document.getElementById('about-content').classList.add('lg:flex')
                 document.getElementById(nav_id).scrollIntoView();
+                //location.href = "#projects";
             }
     
             function show_project_details(project_id){
