--- a/portfolio/templates/portfolio/project_details.html
+++ b/portfolio/templates/portfolio/project_details.html
@@ -41,7 +41,7 @@
                     GitHub Repo
                 </a>
             </div>
-            <a href="" class="mt-5 py-2 px-5 text-sm text-center whitespace-nowrap    border text-gray-700 hover:text-white border-gray-700
+            <a class="mt-5 py-2 px-5 text-sm text-center whitespace-nowrap    border text-gray-700 hover:text-white border-gray-700
                             bg-white hover:bg-gray-700 rounded-full transition ease-in duration-300 cursor-pointer
                              focus:text-gray-700 focus:bg-white" 
                             onclick="nav_to('projects')">
