--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -38,8 +38,9 @@
             I'm Kristian Møller Schmidt, a self-taught
             developer and a trained mathematician</h2>
         <p class="border-b boder-gray-900 pb-5 md:text-lg">
-            I'm a self-taught software developer with a university background in mathematics and comparative literature. I enjoy various kinds of
-            coding, from nerdy computer science stuff like algorithms and machine learning to practical web development, front end and back end.  
+            I'm a self-taught software developer with a university background in mathematics and comparative 
+            literature. I'm curious by nature and enjoy various kinds of programming, from math heavy 
+            algorithms and machine learning to practical web development, front end and back end.  
             <br><br>
             Check out some of my projects, and feel free to send me an email if you'd like to work together.
         </p>
@@ -79,7 +80,7 @@
     <h1 class="text-4xl font-bold pb-3 ">My skills</h1>
 
     <p> I build full stack web applications and backend algorithms using tools such as Python, Django, Flask,
-        PHP, SQL, Javascript, HTML, CSS, Sass, Bootstrap, Tailwind CSS and Docker.</br>Below, I
+        PHP, SQL, Javascript, HTML, CSS, Sass, Bootstrap, Tailwind CSS and Docker. Below, I
         hightlight my key technical skills that I will bring to your project.
     </p>
     <div class="mt-8 grid lg:grid-cols-2 xl:grid-cols-3 gap-10">
@@ -118,8 +119,8 @@
     <h2 class="text-3xl font-heavy pt-10 pb-1">Games & algorithms</h2>
     <p class="pb-3">
         I like to solve interesting problems using appropriate algorithms and
-        datastructures. Games are a nice playground for stuff like this.
-        Here are three well known games and puzzles that you can play yourself or choose to let an AI agent
+        datastructures. Games can be a nice playground for stuff like this.
+        Here are three well known games and puzzles that you can either play yourself or choose to let an AI agent
         play for you.
         I originally made a backend for all three AI-agents as part of the MicroMasters Program
         in Artificial Intelligence at Columbia University (online
