--- a/portfolio/templates/portfolio/project_details.html
+++ b/portfolio/templates/portfolio/project_details.html
@@ -3,7 +3,7 @@
     <div class="text-gray-800 lg:py mt-10 px-6 sm:px-20 sm:mt-12 md:max-w-screen-lg">
         <h2 class="text-2xl font-bold mb-3"> {{ project.title }} </h2>
         {% if project.project_id == 'bugtracker_django' %}
-            <p class="bg-red-400 text-center text-lg mb-4 p-2 text-red-50">This project is currently under development</p>
+            <p class="bg-red-400 text-center text-lg mb-4 p-2 text-red-50">This project is currently under development and may not work</p>
         {% endif %}
         <p class="text-sm sm:text-base mb-4"> 
             {{ project.description }}
