--- a/portfolio/templates/portfolio/project_details.html
+++ b/portfolio/templates/portfolio/project_details.html
@@ -29,7 +29,7 @@
                 {% if project.title != 'This Portfolio' %}
                 <a href="{{ project.external_url }}"
                     class="mr-5 px-5 py-2 text-sm text-center text-blue-50 hover:text-blue-900 bg-blue-500 rounded-full hover:bg-blue-300 
-                    transition ease-in duration-300s focus:bg-blue-500 focus:text-blue-50">
+                    transition ease-in duration-300s focus:bg-blue-500 focus:text-blue-50" target="_blank">
                     Visit Project
                 </a>  
             
@@ -37,7 +37,7 @@
                 <a href="{{ project.github_url }}"
                     class="mr-5 px-5 py-2 text-sm text-center text-yellow-50
                     hover:text-yellow-900 bg-yellow-500 rounded-full hover:bg-yellow-300 transition ease-in duration-300s
-                    focus:bg-yellow-500 focus:text-yellow-50">
+                    focus:bg-yellow-500 focus:text-yellow-50" target="_blank">
                     GitHub Repo
                 </a>
             </div>
